parserAnalyzer/CompiledFiles/FluParser.py
# Generated from F:\\PPL\\PPL_project\\parserAnalyzer\\Flu.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FluParser ( Parser ):

    grammarFileName = "Flu.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'tomorrow'", "'today'", "'yesterday'", 
                     "<INVALID>", "<INVALID>", "'is'", "'the'", "'my'", 
                     "'status'", "<INVALID>", "'before'", "'later'", "'-'", 
                     "<INVALID>", "<INVALID>", "'days'", "'?'", "'period'", 
                     "'ovulation'", "'fertile'", "'non-fertile'", "'cycle'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'on'", "'in'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WHAT", "TM", "IS", "THE", "MY", "STATUS", "BeforeAfter", 
                      "BEFORE", "AFTER", "SLASH", "NUMBER", "MO", "DAYS", 
                      "QUESTIONMARK", "PER", "OVU", "FER", "NONF", "CYCLE", 
                      "START", "END", "SHOW", "ON", "IN", "WHEN", "WORD", 
                      "WS" ]

    RULE_program = 0
    RULE_sentence = 1
    RULE_require = 2
    RULE_ask = 3
    RULE_verb = 4
    RULE_phrase = 5
    RULE_cycleStatus = 6
    RULE_specificPharse = 7
    RULE_date = 8
    RULE_dateInNum = 9
    RULE_dateInWord = 10
    RULE_dateCompare = 11
    RULE_dateMonth = 12
    RULE_monthWord = 13
    RULE_monthCompare = 14

    ruleNames =  [ "program", "sentence", "require", "ask", "verb", "phrase", 
                   "cycleStatus", "specificPharse", "date", "dateInNum", 
                   "dateInWord", "dateCompare", "dateMonth", "monthWord", 
                   "monthCompare" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WHAT=4
    TM=5
    IS=6
    THE=7
    MY=8
    STATUS=9
    BeforeAfter=10
    BEFORE=11
    AFTER=12
    SLASH=13
    NUMBER=14
    MO=15
    DAYS=16
    QUESTIONMARK=17
    PER=18
    OVU=19
    FER=20
    NONF=21
    CYCLE=22
    START=23
    END=24
    SHOW=25
    ON=26
    IN=27
    WHEN=28
    WORD=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentence(self):
            return self.getTypedRuleContext(FluParser.SentenceContext,0)


        def getRuleIndex(self):
            return FluParser.RULE_program




    def program(self):

        localctx = FluParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.sentence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def require(self):
            return self.getTypedRuleContext(FluParser.RequireContext,0)


        def ask(self):
            return self.getTypedRuleContext(FluParser.AskContext,0)


        def getRuleIndex(self):
            return FluParser.RULE_sentence




    def sentence(self):

        localctx = FluParser.SentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentence)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FluParser.START, FluParser.END, FluParser.SHOW]:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.require()
                pass
            elif token in [FluParser.WHAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.ask()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequireContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb(self):
            return self.getTypedRuleContext(FluParser.VerbContext,0)


        def phrase(self):
            return self.getTypedRuleContext(FluParser.PhraseContext,0)


        def date(self):
            return self.getTypedRuleContext(FluParser.DateContext,0)


        def ON(self):
            return self.getToken(FluParser.ON, 0)

        def IN(self):
            return self.getToken(FluParser.IN, 0)

        def getRuleIndex(self):
            return FluParser.RULE_require




    def require(self):

        localctx = FluParser.RequireContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_require)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.verb()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FluParser.PER) | (1 << FluParser.OVU) | (1 << FluParser.FER) | (1 << FluParser.NONF))) != 0):
                self.state = 37
                self.phrase()


            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FluParser.ON or _la==FluParser.IN:
                self.state = 40
                _la = self._input.LA(1)
                if not(_la==FluParser.ON or _la==FluParser.IN):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FluParser.T__0) | (1 << FluParser.T__1) | (1 << FluParser.T__2) | (1 << FluParser.NUMBER))) != 0):
                self.state = 43
                self.date()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AskContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHAT(self):
            return self.getToken(FluParser.WHAT, 0)

        def QUESTIONMARK(self):
            return self.getToken(FluParser.QUESTIONMARK, 0)

        def cycleStatus(self):
            return self.getTypedRuleContext(FluParser.CycleStatusContext,0)


        def specificPharse(self):
            return self.getTypedRuleContext(FluParser.SpecificPharseContext,0)


        def IS(self):
            return self.getToken(FluParser.IS, 0)

        def TM(self):
            return self.getToken(FluParser.TM, 0)

        def getRuleIndex(self):
            return FluParser.RULE_ask




    def ask(self):

        localctx = FluParser.AskContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ask)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(FluParser.WHAT)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FluParser.IS:
                self.state = 47
                self.match(FluParser.IS)


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FluParser.TM:
                self.state = 50
                self.match(FluParser.TM)


            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FluParser.CYCLE]:
                self.state = 53
                self.cycleStatus()
                pass
            elif token in [FluParser.PER, FluParser.OVU, FluParser.FER, FluParser.NONF]:
                self.state = 54
                self.specificPharse()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 57
            self.match(FluParser.QUESTIONMARK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(FluParser.START, 0)

        def END(self):
            return self.getToken(FluParser.END, 0)

        def SHOW(self):
            return self.getToken(FluParser.SHOW, 0)

        def getRuleIndex(self):
            return FluParser.RULE_verb




    def verb(self):

        localctx = FluParser.VerbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_verb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FluParser.START) | (1 << FluParser.END) | (1 << FluParser.SHOW))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PhraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CYCLE(self):
            return self.getToken(FluParser.CYCLE, 0)

        def OVU(self):
            return self.getToken(FluParser.OVU, 0)

        def PER(self):
            return self.getToken(FluParser.PER, 0)

        def FER(self):
            return self.getToken(FluParser.FER, 0)

        def NONF(self):
            return self.getToken(FluParser.NONF, 0)

        def getRuleIndex(self):
            return FluParser.RULE_phrase




    def phrase(self):

        localctx = FluParser.PhraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_phrase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FluParser.PER) | (1 << FluParser.OVU) | (1 << FluParser.FER) | (1 << FluParser.NONF))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 62
            self.match(FluParser.CYCLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleStatusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CYCLE(self):
            return self.getToken(FluParser.CYCLE, 0)

        def STATUS(self):
            return self.getToken(FluParser.STATUS, 0)

        def date(self):
            return self.getTypedRuleContext(FluParser.DateContext,0)


        def ON(self):
            return self.getToken(FluParser.ON, 0)

        def IN(self):
            return self.getToken(FluParser.IN, 0)

        def getRuleIndex(self):
            return FluParser.RULE_cycleStatus




    def cycleStatus(self):

        localctx = FluParser.CycleStatusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cycleStatus)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(FluParser.CYCLE)
            self.state = 65
            self.match(FluParser.STATUS)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FluParser.ON or _la==FluParser.IN:
                self.state = 66
                _la = self._input.LA(1)
                if not(_la==FluParser.ON or _la==FluParser.IN):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 69
            self.date()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecificPharseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dateMonth(self):
            return self.getTypedRuleContext(FluParser.DateMonthContext,0)


        def OVU(self):
            return self.getToken(FluParser.OVU, 0)

        def PER(self):
            return self.getToken(FluParser.PER, 0)

        def FER(self):
            return self.getToken(FluParser.FER, 0)

        def NONF(self):
            return self.getToken(FluParser.NONF, 0)

        def DAYS(self):
            return self.getToken(FluParser.DAYS, 0)

        def ON(self):
            return self.getToken(FluParser.ON, 0)

        def IN(self):
            return self.getToken(FluParser.IN, 0)

        def getRuleIndex(self):
            return FluParser.RULE_specificPharse




    def specificPharse(self):

        localctx = FluParser.SpecificPharseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_specificPharse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FluParser.PER) | (1 << FluParser.OVU) | (1 << FluParser.FER) | (1 << FluParser.NONF))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FluParser.DAYS:
                self.state = 72
                self.match(FluParser.DAYS)


            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FluParser.ON or _la==FluParser.IN:
                self.state = 75
                _la = self._input.LA(1)
                if not(_la==FluParser.ON or _la==FluParser.IN):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 78
            self.dateMonth()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dateCompare(self):
            return self.getTypedRuleContext(FluParser.DateCompareContext,0)


        def dateInNum(self):
            return self.getTypedRuleContext(FluParser.DateInNumContext,0)


        def dateInWord(self):
            return self.getTypedRuleContext(FluParser.DateInWordContext,0)


        def getRuleIndex(self):
            return FluParser.RULE_date




    def date(self):

        localctx = FluParser.DateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_date)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 80
                self.dateCompare()
                pass

            elif la_ == 2:
                self.state = 81
                self.dateInNum()
                pass

            elif la_ == 3:
                self.state = 82
                self.dateInWord()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateInNumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(FluParser.NUMBER)
            else:
                return self.getToken(FluParser.NUMBER, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(FluParser.SLASH)
            else:
                return self.getToken(FluParser.SLASH, i)

        def getRuleIndex(self):
            return FluParser.RULE_dateInNum




    def dateInNum(self):

        localctx = FluParser.DateInNumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dateInNum)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(FluParser.NUMBER)
            self.state = 86
            self.match(FluParser.SLASH)
            self.state = 87
            self.match(FluParser.NUMBER)
            self.state = 88
            self.match(FluParser.SLASH)
            self.state = 89
            self.match(FluParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateInWordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FluParser.RULE_dateInWord




    def dateInWord(self):

        localctx = FluParser.DateInWordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dateInWord)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FluParser.T__0) | (1 << FluParser.T__1) | (1 << FluParser.T__2))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateCompareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(FluParser.NUMBER, 0)

        def DAYS(self):
            return self.getToken(FluParser.DAYS, 0)

        def BeforeAfter(self):
            return self.getToken(FluParser.BeforeAfter, 0)

        def getRuleIndex(self):
            return FluParser.RULE_dateCompare




    def dateCompare(self):

        localctx = FluParser.DateCompareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dateCompare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(FluParser.NUMBER)
            self.state = 94
            self.match(FluParser.DAYS)
            self.state = 95
            self.match(FluParser.BeforeAfter)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateMonthContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def monthWord(self):
            return self.getTypedRuleContext(FluParser.MonthWordContext,0)


        def monthCompare(self):
            return self.getTypedRuleContext(FluParser.MonthCompareContext,0)


        def getRuleIndex(self):
            return FluParser.RULE_dateMonth




    def dateMonth(self):

        localctx = FluParser.DateMonthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_dateMonth)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FluParser.WHEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.monthWord()
                pass
            elif token in [FluParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.monthCompare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MonthWordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHEN(self):
            return self.getToken(FluParser.WHEN, 0)

        def MO(self):
            return self.getToken(FluParser.MO, 0)

        def getRuleIndex(self):
            return FluParser.RULE_monthWord




    def monthWord(self):

        localctx = FluParser.MonthWordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_monthWord)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(FluParser.WHEN)
            self.state = 102
            self.match(FluParser.MO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MonthCompareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(FluParser.NUMBER, 0)

        def MO(self):
            return self.getToken(FluParser.MO, 0)

        def BeforeAfter(self):
            return self.getToken(FluParser.BeforeAfter, 0)

        def getRuleIndex(self):
            return FluParser.RULE_monthCompare




    def monthCompare(self):

        localctx = FluParser.MonthCompareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_monthCompare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(FluParser.NUMBER)
            self.state = 105
            self.match(FluParser.MO)
            self.state = 106
            self.match(FluParser.BeforeAfter)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





